--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "PASAR",
+  "name": "pasar",
   "version": "0.0.0",
-  "description": "Promise Aware API REST generator to easily build Express-like routers with smart API REST capabilities including extensible output formatters.",
+  "description": "Promise Aware Smart API REST generator to easily build Express-like routers with smart API REST capabilities including extensible output formatters.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
