--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pasar",
-  "version": "0.0.0",
-  "description": "Promise Aware Smart API REST generator to easily build Express-like routers with smart API REST capabilities including extensible output formatters.",
+  "version": "0.0.1",
+  "description": "Promise Aware Smart API REST generator to easily build Express routers with advanced capabilities.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
