Implemented 'fn' vector to easily reuse API as a function library.

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "express": "~4.12.4",
     "jade": "^1.11.0",
-    "json2html": "0.0.8"
+    "json2html": "0.0.8",
+    "promise": "^7.0.3"
   }
 }
