--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "url": "https://github.com/bitifet/pasar/issues"
   },
   "dependencies": {
+    "deasync": "^0.1.0",
     "express": "~4.12.4",
     "jade": "^1.11.0",
     "json2html": "0.0.8",
