--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "url": "https://github.com/bitifet/pasar/issues"
   },
   "dependencies": {
+    "bluebird": "^2.10.2",
     "deasync": "^0.1.0",
     "express": "~4.12.4",
     "jade": "^1.11.0",
     "json2html": "0.0.8",
-    "json2xls-xml": "0.0.12",
-    "promise": "^7.0.3"
+    "json2xls-xml": "0.0.12"
   }
 }
