--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pasar",
-  "version": "1.2.13",
+  "version": "1.2.14",
   "description": "Promise Aware Smart API REST builder to easily implement Express routers with advanced capabilities.",
   "main": "index.js",
   "scripts": {
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "bluebird": "^2.10.2",
+    "chalk": "^1.1.3",
     "deasync": "^0.1.0",
     "express": "~4.12.4",
     "extend": "^3.0.0",
