Migration from (legacy) Jade to Pug template engine.
  * Replaced Jade ("old" pug) by Pug.

  * Renamed and reviewed all internal (default) templates.

  * Added small hack to avoid pug errors in inline form templates when
    specified using (multiline) string templates:
    - Pug is more strict with indentation so, if you don't want to break
      your code one you will need to add extra space at the left that
      will make pug complain.
    - That extra space is now "intelligently" removed so you only need
      to arrange all indentation in reference to the first row.

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "deasync": "^0.1.19",
     "express": "^4.17.1",
     "extend": "^3.0.2",
-    "jade": "^1.11.0",
-    "json2xls-xml": "0.0.14"
+    "json2xls-xml": "0.0.14",
+    "pug": "^2.0.4"
   }
 }
